# v2/model_device_serializer_public.go
@@ -27,7 +27,7 @@ type DeviceSerializerPublic struct {
 	IsWstk *bool `json:"is_wstk,omitempty"`
 	Uri NullableString `json:"uri,omitempty"`
 	Online *bool `json:"online,omitempty"`
-	Status *StatusF39Enum `json:"status,omitempty"`
+	Status *StatusEnum `json:"status,omitempty"`
 	LastUpdate time.Time `json:"last_update"`
 	DateCreated time.Time `json:"date_created"`
 	Metadata interface{} `json:"metadata,omitempty"`
@@ -369,9 +369,9 @@ func (o *DeviceSerializerPublic) SetOnline(v bool) {
 }
 
 // GetStatus returns the Status field value if set, zero value otherwise.
-func (o *DeviceSerializerPublic) GetStatus() StatusF39Enum {
+func (o *DeviceSerializerPublic) GetStatus() StatusEnum {
 	if o == nil || isNil(o.Status) {
-		var ret StatusF39Enum
+		var ret StatusEnum
 		return ret
 	}
 	return *o.Status
@@ -379,7 +379,7 @@ func (o *DeviceSerializerPublic) GetStatus() StatusF39Enum {
 
 // GetStatusOk returns a tuple with the Status field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *DeviceSerializerPublic) GetStatusOk() (*StatusF39Enum, bool) {
+func (o *DeviceSerializerPublic) GetStatusOk() (*StatusEnum, bool) {
 	if o == nil || isNil(o.Status) {
     return nil, false
 	}
@@ -395,8 +395,8 @@ func (o *DeviceSerializerPublic) HasStatus() bool {
 	return false
 }
 
-// SetStatus gets a reference to the given StatusF39Enum and assigns it to the Status field.
-func (o *DeviceSerializerPublic) SetStatus(v StatusF39Enum) {
+// SetStatus gets a reference to the given StatusEnum and assigns it to the Status field.
+func (o *DeviceSerializerPublic) SetStatus(v StatusEnum) {
 	o.Status = &v
 }
 
