# v2/model_patched_write_only_device.go
@@ -28,7 +28,7 @@ type PatchedWriteOnlyDevice struct {
 	IsWstk *bool `json:"is_wstk,omitempty"`
 	Uri NullableString `json:"uri,omitempty"`
 	Online *bool `json:"online,omitempty"`
-	Status *StatusF39Enum `json:"status,omitempty"`
+	Status *StatusEnum `json:"status,omitempty"`
 	LastUpdate *time.Time `json:"last_update,omitempty"`
 	DateCreated *time.Time `json:"date_created,omitempty"`
 	Metadata interface{} `json:"metadata,omitempty"`
@@ -435,9 +435,9 @@ func (o *PatchedWriteOnlyDevice) SetOnline(v bool) {
 }
 
 // GetStatus returns the Status field value if set, zero value otherwise.
-func (o *PatchedWriteOnlyDevice) GetStatus() StatusF39Enum {
+func (o *PatchedWriteOnlyDevice) GetStatus() StatusEnum {
 	if o == nil || isNil(o.Status) {
-		var ret StatusF39Enum
+		var ret StatusEnum
 		return ret
 	}
 	return *o.Status
@@ -445,7 +445,7 @@ func (o *PatchedWriteOnlyDevice) GetStatus() StatusF39Enum {
 
 // GetStatusOk returns a tuple with the Status field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *PatchedWriteOnlyDevice) GetStatusOk() (*StatusF39Enum, bool) {
+func (o *PatchedWriteOnlyDevice) GetStatusOk() (*StatusEnum, bool) {
 	if o == nil || isNil(o.Status) {
     return nil, false
 	}
@@ -461,8 +461,8 @@ func (o *PatchedWriteOnlyDevice) HasStatus() bool {
 	return false
 }
 
-// SetStatus gets a reference to the given StatusF39Enum and assigns it to the Status field.
-func (o *PatchedWriteOnlyDevice) SetStatus(v StatusF39Enum) {
+// SetStatus gets a reference to the given StatusEnum and assigns it to the Status field.
+func (o *PatchedWriteOnlyDevice) SetStatus(v StatusEnum) {
 	o.Status = &v
 }
 
