# v2/model_status_enum.go
@@ -3,7 +3,7 @@ HW Mux Reservation System
 
 No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 
-API version: 2.27.0
+API version: 2.31.0
 */
 
 // Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
@@ -15,7 +15,7 @@ import (
 	"fmt"
 )
 
-// StatusEnum the model 'StatusEnum'
+// StatusEnum * `ACTIVE` - Active * `DISABLED` - Disabled * `OFFLINE` - Offline
 type StatusEnum string
 
 // List of StatusEnum
